[gd_scene load_steps=2 format=3 uid="uid://s81vvs8vdlee"]

[ext_resource type="Script" path="res://Scripts/ComponentScripts/inventory_item_container.gd" id="1_xf0by"]

[node name="InventoryItemContainer" type="Button"]
custom_minimum_size = Vector2(400, 100)
anchors_preset = -1
anchor_right = 0.3125
anchor_bottom = 0.138889
flat = true
script = ExtResource("1_xf0by")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"InventoryItemPanel"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 20
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Item Name"

[node name="ItemCount" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "99"

[connection signal="pressed" from="." to="." method="_on_pressed"]
